--- a/NutrientScraper/design/stylesheet.css
+++ b/NutrientScraper/design/stylesheet.css
@@ -39,13 +39,17 @@ li {
   text-align: center;
 }
 
+.clickable {
+  color: blue;
+  cursor: pointer;
+}
+
 table.table1 {
   float: left;
   width: 640px;
   margin: 0 5% 10% 5%;
   text-align: center;
   table-layout: fixed;
-    /* padding: 5px; */
  }
 
  table.table1 thead, tbody {
@@ -57,33 +61,19 @@ table.table1 {
 table.table1 tbody {
   height: 140px;
   width: 665px;
-
 }
 
 table.table1 thead {
   margin-right: auto;
 }
 
-
-table.table1 th:first-child {
-  padding: 5px;
-  width: 300px;
-  border-left: 0;
-  table-layout: fixed;
-}
-
-table.table1 th:not(:first-child) {
-  padding: 5px;
-  width: 100px;
-}
-
-table.table1 td:first-child {
+table.table1 th:first-child, td:first-child {
   padding: 5px;
   width: 300px;
   border-left: 0;
 }
 
-table.table1 td:not(:first-child) {
+table.table1 th:not(:first-child), td:not(:first-child) {
   padding: 5px;
   width: 100px;
 }
